--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="/image_resources/home/blog.jpg" alt="">
+            <img src="./image_resources/home/blog.jpg" alt="">
           </div>
         </div>
         <div class="column">
