fixed the blog pics

--- a/post.html
+++ b/post.html
@@ -39,7 +39,7 @@
         <p class="meta">
           <i class="fas fa-user"></i> Posted by <strong>Federico</strong> | <small>December 20, 2020</small>
         </p>
-        <img src="/image_resources/blog/blog1.jpg" alt="">
+        <img src="./image_resources/blog/blog1.jpg" alt="">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod ad sequi dolore aliquid officiis,
           assumenda atque iste commodi magnam praesentium.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque harum consequuntur facere minus id reiciendis reprehenderit laborum dolores voluptatum impedit? Dignissimos recusandae, natus aliquid provident iusto doloribus id nam ad aut? Amet iure praesentium necessitatibus reprehenderit itaque. Consequuntur iusto praesentium magni beatae veritatis assumenda odio. Voluptatem vel quas illo, ipsam sit repellendus dicta asperiores. Quos, maxime. Recusandae nesciunt porro corrupti.</p>
@@ -50,7 +50,7 @@
         <p class="meta">
           <i class="fas fa-user"></i> Posted by <strong>Kai</strong> | <small>December 21, 2020</small>
         </p>
-        <img src="/image_resources/blog/blog2.jpg" alt="">
+        <img src="./image_resources/blog/blog2.jpg" alt="">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod ad sequi dolore aliquid officiis,
           assumenda atque iste commodi magnam praesentium.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque harum consequuntur facere minus id reiciendis reprehenderit laborum dolores voluptatum impedit? Dignissimos recusandae, natus aliquid provident iusto doloribus id nam ad aut? Amet iure praesentium necessitatibus reprehenderit itaque. Consequuntur iusto praesentium magni beatae veritatis assumenda odio. Voluptatem vel quas illo, ipsam sit repellendus dicta asperiores. Quos, maxime. Recusandae nesciunt porro corrupti.</p>
@@ -61,7 +61,7 @@
         <p class="meta">
           <i class="fas fa-user"></i> Posted by <strong>Rei</strong> | <small>December 22, 2020</small>
         </p>
-        <img src="/image_resources/blog/blog3.jpg" alt="">
+        <img src="./image_resources/blog/blog3.jpg" alt="">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod ad sequi dolore aliquid officiis,
           assumenda atque iste commodi magnam praesentium.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque harum consequuntur facere minus id reiciendis reprehenderit laborum dolores voluptatum impedit? Dignissimos recusandae, natus aliquid provident iusto doloribus id nam ad aut? Amet iure praesentium necessitatibus reprehenderit itaque. Consequuntur iusto praesentium magni beatae veritatis assumenda odio. Voluptatem vel quas illo, ipsam sit repellendus dicta asperiores. Quos, maxime. Recusandae nesciunt porro corrupti.</p>
