--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="column">
           <div class="column-2 bg-light">
             <h2>Contact Us</h2>
-            <form action="process.php" class="callback-form" method="POST">
+            <form action="process.php" class="callback-form" method="POST" netlify>
               <div class="form-control">
                 <label for="name"></label>
                 <input type="text" name="name" id="name" placeholder="name">
@@ -208,7 +208,7 @@
               </div>
               <div class="form-control">
                 <label for="message"></label>
-                <textarea name="message" id="message" cols="100" rows="5"></textarea>
+                <textarea name="message" id="message" placeholder="enter message"></textarea>
               </div>
               <input type="submit" value="Send" id="submit" class="btn">
             </form>
