--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="lightbox.min.css">
   <link rel="stylesheet" href="utilities.css">
   <link rel="stylesheet" href="style.css">
-  <title>Welcome to My English School</title>
+  <title>Thank you for the submission</title>
 </head>
 
 <body id="home">
